# ENCard

./: Example_Profile.py  gen.py  pyproject.toml  update_name_card.py
encard/: update_namecard.py
encard/src/assets/data/: namecard.json
encard/src/teamplate/: style_one.py
encard/src/tools/: namecard_map.py
