[tool.poetry]

name = "encard"

version = "1.1"

description = "An addon for an asynchronous module and API that allows you to connect to your bot the generation of Genshin character cards from the Enka.Network website."

authors = ["None"]



readme = 'README.md'  # Поддерживаются файлы в формате Markdown



repository = "https://github.com/Nubuki-all/ENCard"

homepage = "https://github.com/Nubuki-all/ENCard"



[tool.poetry.dependencies]

python = "^3.10"

enkacard = "*"




[build-system]

requires = ["poetry-core>=1.0.0"]

build-backend = "poetry.core.masonry.api"

